Add more default memory settings for build.
  - Helps prevent need for boilerplate MAVEN_OPTS environment variables and such.
  - Good defaults to prevent build from failing.
  - Also added perm gen settings for the pre-1.8 profile.